aks/https-nginx/ingress/nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tutorial
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx.yogiman.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
